camera button alignment fixed

--- a/client/src/app/components/take-picture/take-picture.component.css
+++ b/client/src/app/components/take-picture/take-picture.component.css
@@ -95,7 +95,7 @@ h1 {
 .captureButton {
   position:absolute;
   bottom: 0;
-  margin-bottom: 60px;
+  /* margin-bottom: 10px; */
   padding: 10px 0;
   width: 100vw;
   height: 100px;
